RESOLVED FIXED39522
Limit number of tiles that can be created for tiled layers on Windows
https://bugs.webkit.org/show_bug.cgi?id=39522
Summary Limit number of tiles that can be created for tiled layers on Windows
Chris Marrin
Reported 2010-05-21 18:34:00 PDT
My change in https://bugs.webkit.org/show_bug.cgi?id=39461 does not limit the number of tiles that can be created, so for very large elements crashes and hangs can occur. I will implement the following: I will add a workaround where I limit the number of tiles. At 512x512, a tile consumes about a megabyte of memory. If we limit to 500 tiles I think we will be able to handle extremely large composited elements yet still keep memory under control. For instance, an element of 20,000 x 1000 will use 160 tiles and an element of 1000 x 100,000 is 400 tiles. I will render tiles in the upper left corner of the tiled layer, so the first part of the element, which will usually be visible, will be what gets rendered. This will protect us against very large tiled layers, until a more efficient, visibility based optimization can be done.
Attachments
Patch (5.70 KB, patch)
2010-05-22 15:28 PDT, Chris Marrin
simon.fraser: review+
Chris Marrin
Comment 1 2010-05-21 18:56:14 PDT
Chris Marrin
Comment 2 2010-05-22 15:28:51 PDT
Chris Marrin
Comment 3 2010-05-23 07:48:34 PDT
Note You need to log in before you can comment on or make changes to this bug.